chore: use symbf instead of mathbf and boldsymbol

--- a/slides/_lecture11-old.qmd
+++ b/slides/_lecture11-old.qmd
@@ -352,7 +352,7 @@ $$
 To test out how this works, we introduce two simplifications:
 
 - $\Sigma_u(\nu) = \nu I_m$
-- $X = \mathbf{1}$ (intercept-only fixed effects)
+- $X = \symbf{1}$ (intercept-only fixed effects)
 - $z_{ij} \in \{0, 1\}$ (random intercept, fixed slope)
 
 . . .
